[tool.poetry]
name = "worldbuilder"
version = "0.1.0"
description = "Scripts to help worldbuild in Fantasy Grounds"
authors = ["Chris Seal <sealck@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyaml = "^23.5.7"
types-PyYAML = "^6.0.12"
dependency-injector = "^4.41.0"
pydantic = "^1.10.7"
tomlkit = "^0.11.8"
pydantic-config = "^0.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.3.1"
pylint = "^2.17.3"
bandit = "^1.7.5"
black = "^23.3.0"
pytest-cov = "^4.0.0"
genbadge = "^1.1.0"
devtools = "^0.11.0"
sphinx = "^7.0.0"
interrogate = "^1.5.0"
isort = "^5.12.0"
pre-commit = "^3.3.1"
blacken-docs = "^1.13.0"
pydocstyle = "^6.3.0"
yamllint = "^1.31.0"
pytest-mock = "^3.10.0"

[tool.black]
line-length = 89

[tool.pycln]
all = true

[tool.isort]
profile = "black"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
exclude = ["tests", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*", "^test$"]
verbose = 2
quiet = false
whitelist-regex = []
color = true
fail-under = 50

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
